syntax = "proto3";

package overlock.crossplane;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "overlock/crossplane/composition.proto";
import "overlock/crossplane/configuration.proto";
import "overlock/crossplane/environment.proto";
import "overlock/crossplane/params.proto";
import "overlock/crossplane/xrd.proto";

option go_package = "overlock/x/crossplane/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/overlock/crossplane/params";
  }

  // Queries a list of ShowConfiguration items.
  rpc ShowConfiguration(QueryShowConfigurationRequest) returns (QueryShowConfigurationResponse) {
    option (google.api.http).get = "/overlock/crossplane/show_configuration/{id}";
  }

  // Queries a list of ListConfiguration items.
  rpc ListConfiguration(QueryListConfigurationRequest) returns (QueryListConfigurationResponse) {
    option (google.api.http).get = "/overlock/crossplane/list_configuration";
  }

  // Queries a list of ListComposition items.
  rpc ListComposition(QueryListCompositionRequest) returns (QueryListCompositionResponse) {
    option (google.api.http).get = "/overlock/crossplane/list_composition";
  }

  // Queries a list of ShowComposition items.
  rpc ShowComposition(QueryShowCompositionRequest) returns (QueryShowCompositionResponse) {
    option (google.api.http).get = "/overlock/crossplane/show_composition/{id}";
  }

  // Queries a list of ShowXrd items.
  rpc ShowXrd(QueryShowXrdRequest) returns (QueryShowXrdResponse) {
    option (google.api.http).get = "/overlock/crossplane/show_xrd/{id}";
  }

  // Queries a list of ListXrd items.
  rpc ListXrd(QueryListXrdRequest) returns (QueryListXrdResponse) {
    option (google.api.http).get = "/overlock/crossplane/list_xrd";
  }

  // Queries a list of ShowEnvironment items.
  rpc ShowEnvironment(QueryShowEnvironmentRequest) returns (QueryShowEnvironmentResponse) {
    option (google.api.http).get = "/overlock/crossplane/show_environment/{id}";
  }

  // Queries a list of ListEnvironment items.
  rpc ListEnvironment(QueryListEnvironmentRequest) returns (QueryListEnvironmentResponse) {
    option (google.api.http).get = "/overlock/crossplane/list_environment";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryShowConfigurationRequest
message QueryShowConfigurationRequest {
  uint64 id = 1;
}

// QueryShowConfigurationResponse
message QueryShowConfigurationResponse {
  Configuration configuration = 1 [(gogoproto.nullable) = false];
}

// QueryListConfigurationRequest
message QueryListConfigurationRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryListConfigurationResponse
message QueryListConfigurationResponse {
  repeated Configuration configurations = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryListCompositionRequest
message QueryListCompositionRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryListCompositionResponse
message QueryListCompositionResponse {
  repeated Composition compositions = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryShowCompositionRequest
message QueryShowCompositionRequest {
  uint64 id = 1;
}

// QueryShowCompositionResponse
message QueryShowCompositionResponse {
  Composition composition = 1 [(gogoproto.nullable) = false];
}

// QueryShowXrdRequest
message QueryShowXrdRequest {
  uint64 id = 1;
}

// QueryShowXrdResponse
message QueryShowXrdResponse {
  CompositeResourceDefinition xrd = 1 [(gogoproto.nullable) = false];
}

// QueryListXrdRequest
message QueryListXrdRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryListXrdResponse
message QueryListXrdResponse {
  repeated CompositeResourceDefinition xrd = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryShowEnvironmentRequest
message QueryShowEnvironmentRequest {
  uint64 id = 1;
}

// QueryShowEnvironmentResponse
message QueryShowEnvironmentResponse {
  Environment environment = 1;
}

// QueryListEnvironmentRequest
message QueryListEnvironmentRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryListEnvironmentResponse
message QueryListEnvironmentResponse {
  repeated Environment environments = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
