syntax = "proto3";
package overlock.overlock;

import "overlock/overlock/metadata.proto";
import "overlock/overlock/xrd_spec.proto";

option go_package = "overlock/x/overlock/types";

// Complete CompositeResourceDefinition object.
message CompositeResourceDefinition {
  uint64 id = 1;
  Metadata metadata = 2;
  XrdSpec spec = 3;
}
